--- a/UnseonChartLib/Themes/USLineChart.xaml
+++ b/UnseonChartLib/Themes/USLineChart.xaml
@@ -2,10 +2,10 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:UnseonChartLib">
-    <Style TargetType="{x:Type local:CustomControl1}">
+    <Style TargetType="{x:Type local:USLineChart}">
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type local:CustomControl1}">
+                <ControlTemplate TargetType="{x:Type local:USLineChart}">
                     <Border Background="{TemplateBinding Background}"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}">
