--- a/ChartSampleApp/MainWindow.xaml
+++ b/ChartSampleApp/MainWindow.xaml
@@ -1,12 +1,16 @@
-﻿<Window x:Class="ChartSampleApp.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ChartSampleApp"
+        xmlns:USCL="clr-namespace:UnseonChartLib.USCL;assembly=UnseonChartLib"
+        x:Class="ChartSampleApp.MainWindow"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
+
+        <USCL:USLineChart/>
 
     </Grid>
 </Window>
