--- a/ChartSampleApp/MainWindow.xaml
+++ b/ChartSampleApp/MainWindow.xaml
@@ -7,10 +7,10 @@
         xmlns:USCL="clr-namespace:UnseonChartLib.USCL;assembly=UnseonChartLib"
         x:Class="ChartSampleApp.MainWindow"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" Background="#cccccc">
     <Grid>
 
-        <USCL:USLineChart x:Name="ui_usLineChart"/>
+        <USCL:USLineChart x:Name="ui_usLineChart" Margin="10px" Background="#ffffff"/>
 
     </Grid>
 </Window>
